--- a/conf/config.json
+++ b/conf/config.json
@@ -1,34 +1,629 @@
 {
-    "log-file-path": "watchdog.log",
-    "api-server-config":{
-      "node-id": "nc1",
-      "api-port": ":8080",
-      "api-server-key": "E8AA3FBB0F512B32",
-      "api-server-dns":"e2-api.edgedrive.com",
-      "tenant-list-api":"api/tenant/list"
-    },
-
-   "controller-config":{
-    "access-keys-dir":"access-keys",
-      "controller-dns": "localhost:44344",
-      "add-service-account-api": "admin/v1/add_service_account",
-      "get-tenant-info-api": "admin/v1/get_tenant_info"
-  },
-  
-  "tenant-process-name":"minio",
-  "monitored-processes": [
-    "e2_node_controller_service",
-    "trash-cleaner-service",
-    "rclone",
-    "kes",
-    "vault",
-    "load-simulator"
-  ],
+  "log-file-path": "watchdog.log",
+  "tenant-process-name": "minio",
   "monitored-disks": [
     "/",
     "/data1",
     "/data2",
     "/data3",
     "/data4"
+  ],
+  "api-server-config": {
+    "node-id": "nc1",
+    "api-port": ":8080",
+    "api-server-key": "E8AA3FBB0F512B32",
+    "api-server-dns": "e2-api.edgedrive.com",
+    "tenant-list-api": "api/tenant/list",
+    "notify": ""
+  },
+
+  "controller-config": {
+    "access-keys-dir": "access-keys",
+    "controller-dns": "localhost:44344",
+    "add-service-account-api": "admin/v1/add_service_account",
+    "get-tenant-info-api": "admin/v1/get_tenant_info"
+  },
+
+  "monitor":{
+    "system-level-interval":60,
+    "process-level-interval":60
+  },
+
+  "system-metrics": {
+    "resource_metrics": [
+      {
+        "name": "avg_load1",
+        "threshold": 2,
+        "high_load_duration": 60000000000
+      },
+      {
+        "name": "cpu_usage",
+        "threshold": 90,
+        "high_load_duration": 60000000000
+      },
+      {
+        "name": "mem_usage",
+        "threshold": 20,
+        "high_load_duration": 60000000000
+      }
+    ],
+    "disk_metrics": [
+      {
+        "name": "/",
+        "disk_usage": {
+          "name": "disk_usage",
+          "threshold": 50,
+          "high_load_duration": 300000000000
+        },
+        "io_metrics": [
+          {
+            "name": "read_bytes",
+            "threshold": 100000000000000,
+            "high_load_duration": 300000000000
+          },
+          {
+            "name": "write_bytes",
+            "threshold": 100000000000000,
+            "high_load_duration": 300000000000
+          },
+          {
+            "name": "read_count",
+            "threshold": 100000000000,
+            "high_load_duration": 300000000000
+          },
+          {
+            "name": "write_count",
+            "threshold": 10000000000,
+            "high_load_duration": 300000000000
+          }
+        ]
+      },
+      {
+        "name": "/data1",
+        "disk_usage": {
+          "name": "disk_usage",
+          "threshold": 50,
+          "high_load_duration": 300000000000
+        },
+        "io_metrics": [
+          {
+            "name": "read_bytes",
+            "threshold": 100000000000000,
+            "high_load_duration": 300000000000
+          },
+          {
+            "name": "write_bytes",
+            "threshold": 100000000000000,
+            "high_load_duration": 300000000000
+          },
+          {
+            "name": "read_count",
+            "threshold": 100000000000,
+            "high_load_duration": 300000000000
+          },
+          {
+            "name": "write_count",
+            "threshold": 10000000000,
+            "high_load_duration": 300000000000
+          }
+        ]
+      },
+      {
+        "name": "/data2",
+        "disk_usage": {
+          "name": "disk_usage",
+          "threshold": 50,
+          "high_load_duration": 300000000000
+        },
+        "io_metrics": [
+          {
+            "name": "read_bytes",
+            "threshold": 100000000000000,
+            "high_load_duration": 300000000000
+          },
+          {
+            "name": "write_bytes",
+            "threshold": 100000000000000,
+            "high_load_duration": 300000000000
+          },
+          {
+            "name": "read_count",
+            "threshold": 100000000000,
+            "high_load_duration": 300000000000
+          },
+          {
+            "name": "write_count",
+            "threshold": 10000000000,
+            "high_load_duration": 300000000000
+          }
+        ]
+      },
+      {
+        "name": "/data3",
+        "disk_usage": {
+          "name": "disk_usage",
+          "threshold": 50,
+          "high_load_duration": 300000000000
+        },
+        "io_metrics": [
+          {
+            "name": "read_bytes",
+            "threshold": 100000000000000,
+            "high_load_duration": 300000000000
+          },
+          {
+            "name": "write_bytes",
+            "threshold": 100000000000000,
+            "high_load_duration": 300000000000
+          },
+          {
+            "name": "read_count",
+            "threshold": 100000000000,
+            "high_load_duration": 300000000000
+          },
+          {
+            "name": "write_count",
+            "threshold": 10000000000,
+            "high_load_duration": 300000000000
+          }
+        ]
+      },
+      {
+        "name": "/data4",
+        "disk_usage": {
+          "name": "disk_usage",
+          "threshold": 50,
+          "high_load_duration": 300000000000
+        },
+        "io_metrics": [
+          {
+            "name": "read_bytes",
+            "threshold": 100000000000000,
+            "high_load_duration": 300000000000
+          },
+          {
+            "name": "write_bytes",
+            "threshold": 100000000000000,
+            "high_load_duration": 300000000000
+          },
+          {
+            "name": "read_count",
+            "threshold": 100000000000,
+            "high_load_duration": 300000000000
+          },
+          {
+            "name": "write_count",
+            "threshold": 10000000000,
+            "high_load_duration": 300000000000
+          }
+        ]
+      }
+    ]
+  },
+  "monitored-processes": [
+    {
+      "Name": "e2_node_controller_service",
+      "PID": 0,
+      "CPUusage": {
+        "name": "cpu_usage",
+        "threshold": 90,
+        "high_load_duration": 60000000000
+      },
+      "MemUsage": {
+        "name": "mem_usage",
+        "threshold": 20,
+        "high_load_duration": 60000000000
+      },
+      "ConnectionsCount": {
+        "name": "conn_count",
+        "threshold": 15,
+        "high_load_duration": 60000000000
+      }
+    },
+    {
+      "Name": "trash-cleaner-service",
+      "PID": 0,
+      "CPUusage": {
+        "name": "cpu_usage",
+        "threshold": 90,
+        "high_load_duration": 60000000000
+      },
+      "MemUsage": {
+        "name": "mem_usage",
+        "threshold": 20,
+        "high_load_duration": 60000000000
+      },
+      "ConnectionsCount": {
+        "name": "conn_count",
+        "threshold": 15,
+        "high_load_duration": 60000000000
+      }
+    },
+    {
+      "Name": "rclone",
+      "PID": 0,
+      "CPUusage": {
+        "name": "cpu_usage",
+        "threshold": 90,
+        "high_load_duration": 60000000000
+      },
+      "MemUsage": {
+        "name": "mem_usage",
+        "threshold": 20,
+        "high_load_duration": 60000000000
+      },
+      "ConnectionsCount": {
+        "name": "conn_count",
+        "threshold": 15,
+        "high_load_duration": 60000000000
+      }
+    },
+    {
+      "Name": "kes",
+      "PID": 0,
+      "CPUusage": {
+        "name": "cpu_usage",
+        "threshold": 90,
+        "high_load_duration": 60000000000
+      },
+      "MemUsage": {
+        "name": "mem_usage",
+        "threshold": 20,
+        "high_load_duration": 60000000000
+      },
+      "ConnectionsCount": {
+        "name": "conn_count",
+        "threshold": 15,
+        "high_load_duration": 60000000000
+      }
+    },
+    {
+      "Name": "vault",
+      "PID": 0,
+      "CPUusage": {
+        "name": "cpu_usage",
+        "threshold": 90,
+        "high_load_duration": 60000000000
+      },
+      "MemUsage": {
+        "name": "mem_usage",
+        "threshold": 20,
+        "high_load_duration": 60000000000
+      },
+      "ConnectionsCount": {
+        "name": "conn_count",
+        "threshold": 15,
+        "high_load_duration": 60000000000
+      }
+    },
+    {
+      "Name": "load-simulator",
+      "PID": 0,
+      "CPUusage": {
+        "name": "cpu_usage",
+        "threshold": 90,
+        "high_load_duration": 60000000000
+      },
+      "MemUsage": {
+        "name": "mem_usage",
+        "threshold": 20,
+        "high_load_duration": 60000000000
+      },
+      "ConnectionsCount": {
+        "name": "conn_count",
+        "threshold": 15,
+        "high_load_duration": 60000000000
+      }
+    }
+  ],
+  "monitored-tenant-processes": [
+    {
+      "Name": "",
+      "PID": 0,
+      "CPUusage": {
+        "name": "cpu_usage",
+        "threshold": 90,
+        "high_load_duration": 60000000000
+      },
+      "MemUsage": {
+        "name": "mem_usage",
+        "threshold": 20,
+        "high_load_duration": 60000000000
+      },
+      "ConnectionsCount": {
+        "name": "conn_count",
+        "threshold": 15,
+        "high_load_duration": 60000000000
+      },
+      "dns": "sseg.nc11.edgedrive.com"
+    },
+    {
+      "Name": "",
+      "PID": 0,
+      "CPUusage": {
+        "name": "cpu_usage",
+        "threshold": 90,
+        "high_load_duration": 60000000000
+      },
+      "MemUsage": {
+        "name": "mem_usage",
+        "threshold": 20,
+        "high_load_duration": 60000000000
+      },
+      "ConnectionsCount": {
+        "name": "conn_count",
+        "threshold": 15,
+        "high_load_duration": 60000000000
+      },
+      "dns": "w4l8.nc27.edgedrive.com"
+    },
+    {
+      "Name": "",
+      "PID": 0,
+      "CPUusage": {
+        "name": "cpu_usage",
+        "threshold": 90,
+        "high_load_duration": 60000000000
+      },
+      "MemUsage": {
+        "name": "mem_usage",
+        "threshold": 20,
+        "high_load_duration": 60000000000
+      },
+      "ConnectionsCount": {
+        "name": "conn_count",
+        "threshold": 15,
+        "high_load_duration": 60000000000
+      },
+      "dns": "q7r2.nc02.edgedrive.com"
+    },
+    {
+      "Name": "",
+      "PID": 0,
+      "CPUusage": {
+        "name": "cpu_usage",
+        "threshold": 90,
+        "high_load_duration": 60000000000
+      },
+      "MemUsage": {
+        "name": "mem_usage",
+        "threshold": 20,
+        "high_load_duration": 60000000000
+      },
+      "ConnectionsCount": {
+        "name": "conn_count",
+        "threshold": 15,
+        "high_load_duration": 60000000000
+      },
+      "dns": "l0b3.nc52.edgedrive.com"
+    },
+    {
+      "Name": "",
+      "PID": 0,
+      "CPUusage": {
+        "name": "cpu_usage",
+        "threshold": 90,
+        "high_load_duration": 60000000000
+      },
+      "MemUsage": {
+        "name": "mem_usage",
+        "threshold": 20,
+        "high_load_duration": 60000000000
+      },
+      "ConnectionsCount": {
+        "name": "conn_count",
+        "threshold": 15,
+        "high_load_duration": 60000000000
+      },
+      "dns": "x1m0.nc02.edgedrive.com"
+    },
+    {
+      "Name": "",
+      "PID": 0,
+      "CPUusage": {
+        "name": "cpu_usage",
+        "threshold": 90,
+        "high_load_duration": 60000000000
+      },
+      "MemUsage": {
+        "name": "mem_usage",
+        "threshold": 20,
+        "high_load_duration": 60000000000
+      },
+      "ConnectionsCount": {
+        "name": "conn_count",
+        "threshold": 15,
+        "high_load_duration": 60000000000
+      },
+      "dns": "n1e9.nc02.edgedrive.com"
+    },
+    {
+      "Name": "",
+      "PID": 0,
+      "CPUusage": {
+        "name": "cpu_usage",
+        "threshold": 90,
+        "high_load_duration": 60000000000
+      },
+      "MemUsage": {
+        "name": "mem_usage",
+        "threshold": 20,
+        "high_load_duration": 60000000000
+      },
+      "ConnectionsCount": {
+        "name": "conn_count",
+        "threshold": 15,
+        "high_load_duration": 60000000000
+      },
+      "dns": "h2h5.nc42.edgedrive.com"
+    },
+    {
+      "Name": "",
+      "PID": 0,
+      "CPUusage": {
+        "name": "cpu_usage",
+        "threshold": 90,
+        "high_load_duration": 60000000000
+      },
+      "MemUsage": {
+        "name": "mem_usage",
+        "threshold": 20,
+        "high_load_duration": 60000000000
+      },
+      "ConnectionsCount": {
+        "name": "conn_count",
+        "threshold": 15,
+        "high_load_duration": 60000000000
+      },
+      "dns": "m7m7.nc31.edgedrive.com"
+    },
+    {
+      "Name": "",
+      "PID": 0,
+      "CPUusage": {
+        "name": "cpu_usage",
+        "threshold": 90,
+        "high_load_duration": 60000000000
+      },
+      "MemUsage": {
+        "name": "mem_usage",
+        "threshold": 20,
+        "high_load_duration": 60000000000
+      },
+      "ConnectionsCount": {
+        "name": "conn_count",
+        "threshold": 15,
+        "high_load_duration": 60000000000
+      },
+      "dns": "r4y7.nc48.edgedrive.com"
+    }
+  ],
+  "TenantS3MetricsConfig": [
+    {
+      "dns": "sseg.nc11.edgedrive.com",
+      "BucketListing": {
+        "name": "bucket_listing",
+        "threshold": 3,
+        "high_load_duration": 300000000000
+      },
+      "ObjectListing": {
+        "name": "object_listing",
+        "threshold": 3,
+        "high_load_duration": 300000000000
+      },
+      "BucketObjectListMap": {}
+    },
+    {
+      "dns": "w4l8.nc27.edgedrive.com",
+      "BucketListing": {
+        "name": "bucket_listing",
+        "threshold": 3,
+        "high_load_duration": 300000000000
+      },
+      "ObjectListing": {
+        "name": "object_listing",
+        "threshold": 3,
+        "high_load_duration": 300000000000
+      },
+      "BucketObjectListMap": {}
+    },
+    {
+      "dns": "q7r2.nc02.edgedrive.com",
+      "BucketListing": {
+        "name": "bucket_listing",
+        "threshold": 3,
+        "high_load_duration": 300000000000
+      },
+      "ObjectListing": {
+        "name": "object_listing",
+        "threshold": 3,
+        "high_load_duration": 300000000000
+      },
+      "BucketObjectListMap": {}
+    },
+    {
+      "dns": "l0b3.nc52.edgedrive.com",
+      "BucketListing": {
+        "name": "bucket_listing",
+        "threshold": 3,
+        "high_load_duration": 300000000000
+      },
+      "ObjectListing": {
+        "name": "object_listing",
+        "threshold": 3,
+        "high_load_duration": 300000000000
+      },
+      "BucketObjectListMap": {}
+    },
+    {
+      "dns": "x1m0.nc02.edgedrive.com",
+      "BucketListing": {
+        "name": "bucket_listing",
+        "threshold": 3,
+        "high_load_duration": 300000000000
+      },
+      "ObjectListing": {
+        "name": "object_listing",
+        "threshold": 3,
+        "high_load_duration": 300000000000
+      },
+      "BucketObjectListMap": {}
+    },
+    {
+      "dns": "n1e9.nc02.edgedrive.com",
+      "BucketListing": {
+        "name": "bucket_listing",
+        "threshold": 3,
+        "high_load_duration": 300000000000
+      },
+      "ObjectListing": {
+        "name": "object_listing",
+        "threshold": 3,
+        "high_load_duration": 300000000000
+      },
+      "BucketObjectListMap": {}
+    },
+    {
+      "dns": "h2h5.nc42.edgedrive.com",
+      "BucketListing": {
+        "name": "bucket_listing",
+        "threshold": 3,
+        "high_load_duration": 300000000000
+      },
+      "ObjectListing": {
+        "name": "object_listing",
+        "threshold": 3,
+        "high_load_duration": 300000000000
+      },
+      "BucketObjectListMap": {}
+    },
+    {
+      "dns": "m7m7.nc31.edgedrive.com",
+      "BucketListing": {
+        "name": "bucket_listing",
+        "threshold": 3,
+        "high_load_duration": 300000000000
+      },
+      "ObjectListing": {
+        "name": "object_listing",
+        "threshold": 3,
+        "high_load_duration": 300000000000
+      },
+      "BucketObjectListMap": {}
+    },
+    {
+      "dns": "r4y7.nc48.edgedrive.com",
+      "BucketListing": {
+        "name": "bucket_listing",
+        "threshold": 3,
+        "high_load_duration": 300000000000
+      },
+      "ObjectListing": {
+        "name": "object_listing",
+        "threshold": 3,
+        "high_load_duration": 300000000000
+      },
+      "BucketObjectListMap": {}
+    }
   ]
-  }
+}
