--- a/conf/config.json
+++ b/conf/config.json
@@ -29,7 +29,7 @@
     "process-level-interval":60
   },
 
-  "system-metrics": {
+  "system-level-metrics": {
     "resource_metrics": [
       {
         "name": "avg_load1",
@@ -47,164 +47,39 @@
         "high_load_duration": 60000000000
       }
     ],
-    "disk_metrics": [
-      {
-        "name": "/",
+    "disk_metrics": {
         "disk_usage": {
           "name": "disk_usage",
           "threshold": 50,
           "high_load_duration": 300000000000
         },
-        "io_metrics": [
-          {
+
+        "io_metrics": {
+          "read_bytes":{
             "name": "read_bytes",
             "threshold": 100000000000000,
             "high_load_duration": 300000000000
           },
-          {
+          "write_bytes":{
             "name": "write_bytes",
             "threshold": 100000000000000,
             "high_load_duration": 300000000000
           },
-          {
+          "read_count":{
             "name": "read_count",
             "threshold": 100000000000,
             "high_load_duration": 300000000000
           },
-          {
+          "write_count":{
             "name": "write_count",
             "threshold": 10000000000,
             "high_load_duration": 300000000000
           }
-        ]
-      },
-      {
-        "name": "/data1",
-        "disk_usage": {
-          "name": "disk_usage",
-          "threshold": 50,
-          "high_load_duration": 300000000000
-        },
-        "io_metrics": [
-          {
-            "name": "read_bytes",
-            "threshold": 100000000000000,
-            "high_load_duration": 300000000000
-          },
-          {
-            "name": "write_bytes",
-            "threshold": 100000000000000,
-            "high_load_duration": 300000000000
-          },
-          {
-            "name": "read_count",
-            "threshold": 100000000000,
-            "high_load_duration": 300000000000
-          },
-          {
-            "name": "write_count",
-            "threshold": 10000000000,
-            "high_load_duration": 300000000000
-          }
-        ]
-      },
-      {
-        "name": "/data2",
-        "disk_usage": {
-          "name": "disk_usage",
-          "threshold": 50,
-          "high_load_duration": 300000000000
-        },
-        "io_metrics": [
-          {
-            "name": "read_bytes",
-            "threshold": 100000000000000,
-            "high_load_duration": 300000000000
-          },
-          {
-            "name": "write_bytes",
-            "threshold": 100000000000000,
-            "high_load_duration": 300000000000
-          },
-          {
-            "name": "read_count",
-            "threshold": 100000000000,
-            "high_load_duration": 300000000000
-          },
-          {
-            "name": "write_count",
-            "threshold": 10000000000,
-            "high_load_duration": 300000000000
-          }
-        ]
-      },
-      {
-        "name": "/data3",
-        "disk_usage": {
-          "name": "disk_usage",
-          "threshold": 50,
-          "high_load_duration": 300000000000
-        },
-        "io_metrics": [
-          {
-            "name": "read_bytes",
-            "threshold": 100000000000000,
-            "high_load_duration": 300000000000
-          },
-          {
-            "name": "write_bytes",
-            "threshold": 100000000000000,
-            "high_load_duration": 300000000000
-          },
-          {
-            "name": "read_count",
-            "threshold": 100000000000,
-            "high_load_duration": 300000000000
-          },
-          {
-            "name": "write_count",
-            "threshold": 10000000000,
-            "high_load_duration": 300000000000
-          }
-        ]
-      },
-      {
-        "name": "/data4",
-        "disk_usage": {
-          "name": "disk_usage",
-          "threshold": 50,
-          "high_load_duration": 300000000000
-        },
-        "io_metrics": [
-          {
-            "name": "read_bytes",
-            "threshold": 100000000000000,
-            "high_load_duration": 300000000000
-          },
-          {
-            "name": "write_bytes",
-            "threshold": 100000000000000,
-            "high_load_duration": 300000000000
-          },
-          {
-            "name": "read_count",
-            "threshold": 100000000000,
-            "high_load_duration": 300000000000
-          },
-          {
-            "name": "write_count",
-            "threshold": 10000000000,
-            "high_load_duration": 300000000000
-          }
-        ]
+        }
       }
-    ]
   },
-  "monitored-processes": [
-    {
-      "Name": "e2_node_controller_service",
-      "PID": 0,
-      "CPUusage": {
+  "process-level-metrics": {
+    "CPUusage": {
         "name": "cpu_usage",
         "threshold": 90,
         "high_load_duration": 60000000000
@@ -219,411 +94,5 @@
         "threshold": 15,
         "high_load_duration": 60000000000
       }
-    },
-    {
-      "Name": "trash-cleaner-service",
-      "PID": 0,
-      "CPUusage": {
-        "name": "cpu_usage",
-        "threshold": 90,
-        "high_load_duration": 60000000000
-      },
-      "MemUsage": {
-        "name": "mem_usage",
-        "threshold": 20,
-        "high_load_duration": 60000000000
-      },
-      "ConnectionsCount": {
-        "name": "conn_count",
-        "threshold": 15,
-        "high_load_duration": 60000000000
-      }
-    },
-    {
-      "Name": "rclone",
-      "PID": 0,
-      "CPUusage": {
-        "name": "cpu_usage",
-        "threshold": 90,
-        "high_load_duration": 60000000000
-      },
-      "MemUsage": {
-        "name": "mem_usage",
-        "threshold": 20,
-        "high_load_duration": 60000000000
-      },
-      "ConnectionsCount": {
-        "name": "conn_count",
-        "threshold": 15,
-        "high_load_duration": 60000000000
-      }
-    },
-    {
-      "Name": "kes",
-      "PID": 0,
-      "CPUusage": {
-        "name": "cpu_usage",
-        "threshold": 90,
-        "high_load_duration": 60000000000
-      },
-      "MemUsage": {
-        "name": "mem_usage",
-        "threshold": 20,
-        "high_load_duration": 60000000000
-      },
-      "ConnectionsCount": {
-        "name": "conn_count",
-        "threshold": 15,
-        "high_load_duration": 60000000000
-      }
-    },
-    {
-      "Name": "vault",
-      "PID": 0,
-      "CPUusage": {
-        "name": "cpu_usage",
-        "threshold": 90,
-        "high_load_duration": 60000000000
-      },
-      "MemUsage": {
-        "name": "mem_usage",
-        "threshold": 20,
-        "high_load_duration": 60000000000
-      },
-      "ConnectionsCount": {
-        "name": "conn_count",
-        "threshold": 15,
-        "high_load_duration": 60000000000
-      }
-    },
-    {
-      "Name": "load-simulator",
-      "PID": 0,
-      "CPUusage": {
-        "name": "cpu_usage",
-        "threshold": 90,
-        "high_load_duration": 60000000000
-      },
-      "MemUsage": {
-        "name": "mem_usage",
-        "threshold": 20,
-        "high_load_duration": 60000000000
-      },
-      "ConnectionsCount": {
-        "name": "conn_count",
-        "threshold": 15,
-        "high_load_duration": 60000000000
-      }
-    }
-  ],
-  "monitored-tenant-processes": [
-    {
-      "Name": "",
-      "PID": 0,
-      "CPUusage": {
-        "name": "cpu_usage",
-        "threshold": 90,
-        "high_load_duration": 60000000000
-      },
-      "MemUsage": {
-        "name": "mem_usage",
-        "threshold": 20,
-        "high_load_duration": 60000000000
-      },
-      "ConnectionsCount": {
-        "name": "conn_count",
-        "threshold": 15,
-        "high_load_duration": 60000000000
-      },
-      "dns": "sseg.nc11.edgedrive.com"
-    },
-    {
-      "Name": "",
-      "PID": 0,
-      "CPUusage": {
-        "name": "cpu_usage",
-        "threshold": 90,
-        "high_load_duration": 60000000000
-      },
-      "MemUsage": {
-        "name": "mem_usage",
-        "threshold": 20,
-        "high_load_duration": 60000000000
-      },
-      "ConnectionsCount": {
-        "name": "conn_count",
-        "threshold": 15,
-        "high_load_duration": 60000000000
-      },
-      "dns": "w4l8.nc27.edgedrive.com"
-    },
-    {
-      "Name": "",
-      "PID": 0,
-      "CPUusage": {
-        "name": "cpu_usage",
-        "threshold": 90,
-        "high_load_duration": 60000000000
-      },
-      "MemUsage": {
-        "name": "mem_usage",
-        "threshold": 20,
-        "high_load_duration": 60000000000
-      },
-      "ConnectionsCount": {
-        "name": "conn_count",
-        "threshold": 15,
-        "high_load_duration": 60000000000
-      },
-      "dns": "q7r2.nc02.edgedrive.com"
-    },
-    {
-      "Name": "",
-      "PID": 0,
-      "CPUusage": {
-        "name": "cpu_usage",
-        "threshold": 90,
-        "high_load_duration": 60000000000
-      },
-      "MemUsage": {
-        "name": "mem_usage",
-        "threshold": 20,
-        "high_load_duration": 60000000000
-      },
-      "ConnectionsCount": {
-        "name": "conn_count",
-        "threshold": 15,
-        "high_load_duration": 60000000000
-      },
-      "dns": "l0b3.nc52.edgedrive.com"
-    },
-    {
-      "Name": "",
-      "PID": 0,
-      "CPUusage": {
-        "name": "cpu_usage",
-        "threshold": 90,
-        "high_load_duration": 60000000000
-      },
-      "MemUsage": {
-        "name": "mem_usage",
-        "threshold": 20,
-        "high_load_duration": 60000000000
-      },
-      "ConnectionsCount": {
-        "name": "conn_count",
-        "threshold": 15,
-        "high_load_duration": 60000000000
-      },
-      "dns": "x1m0.nc02.edgedrive.com"
-    },
-    {
-      "Name": "",
-      "PID": 0,
-      "CPUusage": {
-        "name": "cpu_usage",
-        "threshold": 90,
-        "high_load_duration": 60000000000
-      },
-      "MemUsage": {
-        "name": "mem_usage",
-        "threshold": 20,
-        "high_load_duration": 60000000000
-      },
-      "ConnectionsCount": {
-        "name": "conn_count",
-        "threshold": 15,
-        "high_load_duration": 60000000000
-      },
-      "dns": "n1e9.nc02.edgedrive.com"
-    },
-    {
-      "Name": "",
-      "PID": 0,
-      "CPUusage": {
-        "name": "cpu_usage",
-        "threshold": 90,
-        "high_load_duration": 60000000000
-      },
-      "MemUsage": {
-        "name": "mem_usage",
-        "threshold": 20,
-        "high_load_duration": 60000000000
-      },
-      "ConnectionsCount": {
-        "name": "conn_count",
-        "threshold": 15,
-        "high_load_duration": 60000000000
-      },
-      "dns": "h2h5.nc42.edgedrive.com"
-    },
-    {
-      "Name": "",
-      "PID": 0,
-      "CPUusage": {
-        "name": "cpu_usage",
-        "threshold": 90,
-        "high_load_duration": 60000000000
-      },
-      "MemUsage": {
-        "name": "mem_usage",
-        "threshold": 20,
-        "high_load_duration": 60000000000
-      },
-      "ConnectionsCount": {
-        "name": "conn_count",
-        "threshold": 15,
-        "high_load_duration": 60000000000
-      },
-      "dns": "m7m7.nc31.edgedrive.com"
-    },
-    {
-      "Name": "",
-      "PID": 0,
-      "CPUusage": {
-        "name": "cpu_usage",
-        "threshold": 90,
-        "high_load_duration": 60000000000
-      },
-      "MemUsage": {
-        "name": "mem_usage",
-        "threshold": 20,
-        "high_load_duration": 60000000000
-      },
-      "ConnectionsCount": {
-        "name": "conn_count",
-        "threshold": 15,
-        "high_load_duration": 60000000000
-      },
-      "dns": "r4y7.nc48.edgedrive.com"
-    }
-  ],
-  "TenantS3MetricsConfig": [
-    {
-      "dns": "sseg.nc11.edgedrive.com",
-      "BucketListing": {
-        "name": "bucket_listing",
-        "threshold": 3,
-        "high_load_duration": 300000000000
-      },
-      "ObjectListing": {
-        "name": "object_listing",
-        "threshold": 3,
-        "high_load_duration": 300000000000
-      },
-      "BucketObjectListMap": {}
-    },
-    {
-      "dns": "w4l8.nc27.edgedrive.com",
-      "BucketListing": {
-        "name": "bucket_listing",
-        "threshold": 3,
-        "high_load_duration": 300000000000
-      },
-      "ObjectListing": {
-        "name": "object_listing",
-        "threshold": 3,
-        "high_load_duration": 300000000000
-      },
-      "BucketObjectListMap": {}
-    },
-    {
-      "dns": "q7r2.nc02.edgedrive.com",
-      "BucketListing": {
-        "name": "bucket_listing",
-        "threshold": 3,
-        "high_load_duration": 300000000000
-      },
-      "ObjectListing": {
-        "name": "object_listing",
-        "threshold": 3,
-        "high_load_duration": 300000000000
-      },
-      "BucketObjectListMap": {}
-    },
-    {
-      "dns": "l0b3.nc52.edgedrive.com",
-      "BucketListing": {
-        "name": "bucket_listing",
-        "threshold": 3,
-        "high_load_duration": 300000000000
-      },
-      "ObjectListing": {
-        "name": "object_listing",
-        "threshold": 3,
-        "high_load_duration": 300000000000
-      },
-      "BucketObjectListMap": {}
-    },
-    {
-      "dns": "x1m0.nc02.edgedrive.com",
-      "BucketListing": {
-        "name": "bucket_listing",
-        "threshold": 3,
-        "high_load_duration": 300000000000
-      },
-      "ObjectListing": {
-        "name": "object_listing",
-        "threshold": 3,
-        "high_load_duration": 300000000000
-      },
-      "BucketObjectListMap": {}
-    },
-    {
-      "dns": "n1e9.nc02.edgedrive.com",
-      "BucketListing": {
-        "name": "bucket_listing",
-        "threshold": 3,
-        "high_load_duration": 300000000000
-      },
-      "ObjectListing": {
-        "name": "object_listing",
-        "threshold": 3,
-        "high_load_duration": 300000000000
-      },
-      "BucketObjectListMap": {}
-    },
-    {
-      "dns": "h2h5.nc42.edgedrive.com",
-      "BucketListing": {
-        "name": "bucket_listing",
-        "threshold": 3,
-        "high_load_duration": 300000000000
-      },
-      "ObjectListing": {
-        "name": "object_listing",
-        "threshold": 3,
-        "high_load_duration": 300000000000
-      },
-      "BucketObjectListMap": {}
-    },
-    {
-      "dns": "m7m7.nc31.edgedrive.com",
-      "BucketListing": {
-        "name": "bucket_listing",
-        "threshold": 3,
-        "high_load_duration": 300000000000
-      },
-      "ObjectListing": {
-        "name": "object_listing",
-        "threshold": 3,
-        "high_load_duration": 300000000000
-      },
-      "BucketObjectListMap": {}
-    },
-    {
-      "dns": "r4y7.nc48.edgedrive.com",
-      "BucketListing": {
-        "name": "bucket_listing",
-        "threshold": 3,
-        "high_load_duration": 300000000000
-      },
-      "ObjectListing": {
-        "name": "object_listing",
-        "threshold": 3,
-        "high_load_duration": 300000000000
-      },
-      "BucketObjectListMap": {}
-    }
-  ]
+  }
 }
